# ChangeLog for dev-ruby/facets
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
  dev-ruby/facets: Run tests using the correct ruby target

  14 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
  dev-ruby/facets: Drop jruby targets due to test failures

  14 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
  dev-ruby/facets: Add ruby20, ruby21, and jruby targets

  13 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
  dev-ruby/facets: Skip failing tests.

*facets-2.9.3 (11 May 2014)

  11 May 2014; Peter Wilmott <p8952@gentoo.org> +facets-2.9.3.ebuild,
  +metadata.xml:
  dev-ruby/facets: Dependency for dev-ruby/hashery