@@ -3,6 +3,9 @@
 # $Header: $
 
   14 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
+  dev-ruby/facets: Allow tests writing to tmp/ to run
+
+  14 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
   dev-ruby/facets: Run tests using the correct ruby target
 
   14 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
